# ObjGauss

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
docs/: asset-library.md  development-flow.md
objgauss/: __init__.py  assets.py  cli.py  clustering.py  demo.py  emergence.py  emergence_benchmark.py  emergence_report.py  features.py  gaussians.py  goal_audit.py  lego_verify.py  mask_voting.py  masks.py  mesh_nerf.py  nerf_proxy.py  object_field.py  ply.py  render_probe.py  sample_bundle.py  segment.py  semantic_demo.py  splat.py  training.py
scripts/: acceptance-demo.mjs  acceptance-renderer-profile.mjs  acceptance-semantic-benchmark.mjs  acceptance-spark-commercial-route.mjs  acceptance-webgpu-headless.mjs  apply-mask-dataparser-transform.mjs  audit-commercial-demo-readiness.mjs  audit-demo.mjs  audit-hard-mask-quality.mjs  audit-near1m-production-gap.mjs  audit-object-boundary-remap-residual.mjs  audit-object-boundary-remap-reviewed-allowlist-manifest.mjs  audit-object-boundary-remap-reviewed-allowlist.mjs  audit-object-mask-boundary.mjs  audit-renderer-route-contract.mjs  audit-renderer-route-goal.mjs  audit-spark-mask-feather-sweep.mjs  audit-spark-native-mask-gate.mjs  audit-spark-native-pick-feasibility.mjs  audit-spark-pick-report.mjs  audit-spark-reconstruct-residual.mjs  audit-spark-trained-route.mjs  audit-spark-trained-sample.mjs  audit-splat-index-mapping.mjs  audit-webgpu-coverage-sweep.mjs  audit-webgpu-cpath-production-sla.mjs  audit-webgpu-cpath-readiness.mjs  (+22 more)
src/: App.jsx  (+19 more)
(+31 files in other folders)
